--- a/frontend/src/app/components/product-details/product-details.component.html
+++ b/frontend/src/app/components/product-details/product-details.component.html
@@ -1,7 +1,8 @@
 <div *ngIf="product$ | async as product">
-    <h2>{{ product.name }}</h2>
-    <p>Description: {{ product.description }}</p>
-    <p>Price: {{ product.price }}</p>
-    <p>Tags: {{ product.tags }}</p>
-  </div>
-  
+  <h2>{{ product.name }}</h2>
+  <p>Description: {{ product.description }}</p>
+  <p>Price: {{ product.price }}</p>
+  <p>Tags:
+  <span *ngFor="let tag of product.tags">{{ tag.name }}</span>
+</p>
+</div>
