--- a/frontend/src/app/components/product-list/product-list.component.html
+++ b/frontend/src/app/components/product-list/product-list.component.html
@@ -7,6 +7,7 @@
           <th>Name</th>
           <th>Description</th>
           <th>Price</th>
+          <th>CreatedAt</th>
         </tr>
       </thead>
       <tbody>
@@ -15,6 +16,7 @@
           <td>{{ product.name }}</td>
           <td>{{ product.description }}</td>
           <td>{{ product.price }}</td>
+          <td>{{ product.createdAt }}</td>
         </tr>
       </tbody>
     </table>
