--- a/frontend/src/app/components/product-details/product-details.component.html
+++ b/frontend/src/app/components/product-details/product-details.component.html
@@ -2,7 +2,8 @@
   <h2>{{ product.name }}</h2>
   <p>Description: {{ product.description }}</p>
   <p>Price: {{ product.price }}</p>
-  <p>Tags:
-  <span *ngFor="let tag of product.tags">{{ tag.name }}</span>
-</p>
+  <p>
+    Tags:
+    <span *ngFor="let tag of product.tags">{{ tag.name }}</span>
+  </p>
 </div>
